Update north API module
